[package]
name = "xkb_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["codegen", "xkeysym"]

[features]
client = []
server = []
[profile.release]
# for perf
debug = 2
debuginfo-level = 1


# TODO: reconsider these options,
# given performance considerations
#panic = 'abort'
#opt-level = 'z' # size optimization
#lto = true # link time optimization
#codegen-units = 1 # reduce codegen units
#strip = true # strip symbols from binary

[dependencies]

xkeysym = { path = "xkeysym" }

# for Error and AccessFlags
nix = { version = "0.28.0", features = ["fs"] }

# for flags
bitflags = "2.4.2"

# for perfect maps with caseless lookups
unicase = "2.7.0"
phf = { version = "0.11.2", features = ["macros", "unicase"] }
phf_shared = "0.11.2"

# for parser
logos = "0.14.0"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }

# for enum counts and iterations
strum = "0.26.2"
strum_macros = "0.26.2"

# for logging
log = "0.4.21"
simplelog = "0.12.2"


[build-dependencies]
#libc = "0.2.153"
lalrpop = "0.20.0"
xkb_rust_codegen = { path = "codegen" }

[dev-dependencies]
evdev = "0.12.1"
xkbcommon = "0.7.0"
criterion = { version = "0.5.1", features=["html_reports"] }

[[bench]]
name = "rulescomp"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
