[package]
name = "xkbcommon-rs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["xkb", "xkbcommon", "libxkbcommon", "wayland", "keymap"]
exclude = ["README.md", ".gitignore", "benches/", "keysym_map_gen/", "scripts/", "src/test/", "test/", "target/"]

[workspace]
members = ["codegen", "keysym_map_gen"]
 
[features]
client = []
server = []

[profile.release]
# for perf
#debug = 2
#debuginfo-level = 1
panic = 'abort'
opt-level = 'z' # size optimization
#lto = true # link time optimization
codegen-units = 1 # reduce codegen units
strip = true # strip symbols from binary

[dependencies]

thiserror = "1.0.58"
log = "0.4.21"
bitflags = "2.4.2"

xkeysym = { git = "https://github.com/rust-windowing/xkeysym.git" }

# for AccessFlags
nix = { version = "0.28.0", features = ["fs"] }

# for perfect ordered maps with caseless lookups
unicase = "2.7.0"
phf = { version = "0.11.2", features = ["macros", "unicase"] }
phf_shared = "0.11.2"

# for parser
logos = "0.14.0"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }

# for enum counts and iterations
strum = "0.26.2"
strum_macros = "0.26.2"



[build-dependencies]
lalrpop = "0.20.0"
xkb_rust_codegen = { path = "codegen" }

[dev-dependencies]
icu_casemap = "1.4.0"
gettext-rs = "0.7.0"
evdev = "0.12.1"
xkbcommon = "0.7.0"
criterion = { version = "0.5.1", features=["html_reports"] }
simplelog = "0.12.2"

[[bench]]
name = "rulescomp"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
