[package]
name = "xkbcommon-rs-codegen"
version = "0.1.0"
authors = ["wysiwys"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wysiwys/xkbcommon-rs"
description = "codegen for the `xkbcommon-rs` crate. Not meant as a standalone crate"


[dependencies]
unicase = "2.7.0"
phf = { version = "0.11.2", features = ["macros", "unicase"] }
phf_codegen = "0.11.1"
regex = "1.10.3"
convert_case = "0.6.0"
#lalrpop = "0.20.0"
